@@ -1,3 +1,13 @@
+2013-03-01  William A. Perkins  <william.perkins@pnnl.gov>
+
+	* mass2_main_025.f90 (apply_scalar_source): if condensation
+	occurs, give it the air temperature
+	(update): set hydrodynamic evaporation if called for
+
+	* temperature_source.f90 (temperature_source): add evaporate flag
+	and code to read it
+	(evaporation_rate): output is now in ft/s
+
 2013-02-28  William A. Perkins  <william.perkins@pnnl.gov>
 
 	* test/transport/pointsource2: test of scalar 'SOURCE' boundary
